# KITTI-SLAM

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
scripts/: build_scancontext.sh  test_scancontext.py
source/: eval.py  graph.py  imu.py  kiss.py  kitti.py  loop_closure.py
