[project]
name = "kitti-slam"
version = "0.1.0"
description = "LIO-SAM inspired GraphSLAM ok KITTI benchmark LiDAR sequences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evo>=1.34.3",
    "gtsam>=4.3a0",
    "kiss-icp>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "open3d>=0.19.0",
    "pykitti>=0.3.1",
]

[tool.uv]
prerelease = "allow"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

