[project]
name = "kitti-slam"
version = "0.1.0"
description = "LIO-SAM inspired GraphSLAM ok KITTI benchmark LiDAR sequences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evo>=1.34.3",
    "graphviz>=0.21",
    "gtsam>=4.3a0",
    "ipykernel>=7.2.0",
    "kiss-icp>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.13.0.92",
    "pykitti>=0.3.1",
    "pyqt5>=5.15.11",
    "scienceplots>=2.2.1",
    "tqdm>=4.67.3",
]

[tool.uv]
prerelease = "allow"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

